--- a/index.html
+++ b/index.html
@@ -333,6 +333,156 @@
     </style>
 </head>
 <body>
+   <style>
+    .pmu-section {
+        background: #f9f9f9;
+        border-radius: 15px;
+        padding: 20px 30px;
+        margin: 30px auto;
+        max-width: 600px;
+        box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+        font-family: 'Arial', sans-serif;
+    }
+
+    .pmu-section h2 {
+        text-align: center;
+        color: #2b6b2f;
+        font-size: 24px;
+        margin-bottom: 10px;
+    }
+
+    .pmu-section .date {
+        text-align: center;
+        font-weight: bold;
+        margin-bottom: 20px;
+        font-size: 18px;
+        color: #555;
+    }
+
+    .pmu-grid {
+        display: grid;
+        gap: 15px;
+    }
+
+    .pmu-box {
+        background: white;
+        border-left: 5px solid #2b6b2f;
+        padding: 15px;
+        border-radius: 10px;
+    }
+
+    .pmu-box h3 {
+        margin: 0 0 10px;
+        color: #333;
+    }
+
+    .pmu-numbers {
+        font-size: 20px;
+        font-weight: bold;
+        color: #1a1a1a;
+        display: flex;
+        gap: 10px;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .pmu-numbers span {
+        background: #e0ffe0;
+        padding: 10px 15px;
+        border-radius: 5px;
+        display: inline-block;
+        text-align: center;
+        width: 50px;
+        height: 50px;
+        font-size: 18px;
+    }
+
+    .highlight-orange {
+        background-color: #ffe5cc;
+    }
+
+    .highlight-blue {
+        background-color: #e0f0ff;
+    }
+
+    .highlight-green {
+        background-color: #e6ffe6;
+    }
+</style>
+
+<div class="btn-resultats-container" style="text-align: center; margin-top: 20px;">
+    <button id="voirResultatsBtn" class="btn-subscribe" onclick="toggleResultats()">
+        Voir plus résultats
+    </button>
+</div>
+
+<!-- Section cachée pour les résultats -->
+<div id="resultats" style="display: none;">
+    <div class="pmu-section">
+        <h2>EXPERT DU TURF</h2>
+        <div class="date">Date : 12/04/2025</div>
+        
+        <div class="pmu-grid">
+            <div class="pmu-box highlight-green">
+                <h3>Tiercé +100%</h3>
+                <div class="pmu-numbers">
+                    <span>15</span><span>3</span><span>4</span>
+                </div>
+            </div>
+            
+            <div class="pmu-box highlight-orange">
+                <h3>Base 100%</h3>
+                <div class="pmu-numbers">
+                    <span>15</span>
+                </div>
+            </div>
+
+            <div class="pmu-box highlight-blue">
+                <h3>Quarté ordre +100%</h3>
+                <div class="pmu-numbers">
+                    <span>15</span><span>3</span><span>4</span><span>13</span>
+                </div>
+            </div>
+
+            <div class="pmu-box highlight-orange">
+                <h3>Couplé sûr 100%</h3>
+                <div class="pmu-numbers">
+                    <span>15</span><span>13</span>
+                </div>
+            </div>
+
+            <div class="pmu-box highlight-green">
+                <h3>Quinté ordre 100%</h3>
+                <div class="pmu-numbers">
+                    <span>15</span><span>3</span><span>4</span><span>13</span><span>12</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script>
+   
+
+    function toggleResultats() {
+        var resultatsSection = document.getElementById("resultats");
+        var btn = document.getElementById("voirResultatsBtn");
+
+        // Si les résultats sont actuellement cachés, les afficher
+        if (resultatsSection.style.display === "none") {
+            resultatsSection.style.display = "block";
+            btn.innerHTML = "Voir moins de résultats"; // Modifier le texte du bouton
+        } else {
+            resultatsSection.style.display = "none";
+            btn.innerHTML = "Voir plus résultats"; // Revenir au texte original du bouton
+        }
+    }
+</script>
+
+
+
+
+
     <div class="premium-banner">
         <i class="fas fa-crown"></i> ABONNEMENT PRONOSTICS PREMIUM <i class="fas fa-crown"></i>
     </div>
