--- a/index.html
+++ b/index.html
@@ -722,6 +722,41 @@
                 <div class="date">Date : 18/04/2025</div>
                 
                 <div class="pmu-grid">
+                    <div class="pmu-box highlight-orange ">
+                        <h3>Couplé </h3>
+                        <div class="pmu-numbers">
+                            <span>4</span><span>6</span>
+                        </div>
+                    </div>
+
+                    <div class="pmu-box highlight-blue ">
+                        <h3>Tiercé </h3>
+                        <div class="pmu-numbers">
+                            <span>4</span><span>6</span><span>13</span>
+                        </div>
+                    </div>
+
+                    <div class="pmu-box highlight-orange ">
+                        <h3>Quarté </h3>
+                        <div class="pmu-numbers">
+                            <span>4</span><span>6</span><span>13</span><span>4</span>
+                        </div>
+                    </div>
+
+                    <div class="pmu-box highlight-green ">
+                        <h3>Quinté </h3>
+                        <div class="pmu-numbers">
+                            <span>4</span><span>6</span><span>13</span><span>4</span><span>17</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+              <!-- Nouveau tableau (19/04/2025) -->
+            <div class="pmu-section">
+                <h2>EXPERT DU TURF</h2>
+                <div class="date">Date : 19/04/2025</div>
+                
+                <div class="pmu-grid">
                     <div class="pmu-box highlight-orange locked">
                         <h3>Couplé <i class="fas fa-lock"></i></h3>
                         <div class="pmu-numbers">
