--- a/index.html
+++ b/index.html
@@ -934,6 +934,41 @@
                 <div class="date">Date : 24/04/2025</div>
                 
                 <div class="pmu-grid">
+                    <div class="pmu-box highlight-orange ">
+                        <h3>Couplé</h3>
+                        <div class="pmu-numbers">
+                            <span>12</span><span>8</span>
+                        </div>
+                    </div>
+
+                    <div class="pmu-box highlight-blue ">
+                        <h3>Tiercé </h3>
+                        <div class="pmu-numbers">
+                            <span>12</span><span>8</span><span>11</span>
+                        </div>
+                    </div>
+
+                    <div class="pmu-box highlight-orange ">
+                        <h3>Quarté </h3>
+                        <div class="pmu-numbers">
+                            <span>12</span><span>8</span><span>11</span><span>5</span>
+                        </div>
+                    </div>
+
+                    <div class="pmu-box highlight-green ">
+                        <h3>Quinté </h3>
+                        <div class="pmu-numbers">
+                            <span>12</span><span>8</span><span>11</span><span>5</span><span>3</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Nouveau tableau (25/04/2025) -->
+            <div class="pmu-section">
+                <h2>EXPERT DU TURF</h2>
+                <div class="date">Date : 25/04/2025</div>
+                
+                <div class="pmu-grid">
                     <div class="pmu-box highlight-orange locked">
                         <h3>Couplé <i class="fas fa-lock"></i></h3>
                         <div class="pmu-numbers">
