--- a/index.html
+++ b/index.html
@@ -1004,6 +1004,41 @@
                 <div class="date">Date : 26/04/2025</div>
                 
                 <div class="pmu-grid">
+                    <div class="pmu-box highlight-orange §">
+                        <h3>Couplé </h3>
+                        <div class="pmu-numbers">
+                            <span>15</span><span>18</span>
+                        </div>
+                    </div>
+
+                    <div class="pmu-box highlight-blue ">
+                        <h3>Tiercé </h3>
+                        <div class="pmu-numbers">
+                            <span>15</span><span>16</span><span>18</span>
+                        </div>
+                    </div>
+
+                    <div class="pmu-box highlight-orange ">
+                        <h3>Quarté </h3>
+                        <div class="pmu-numbers">
+                            <span>15</span><span>16</span><span>18</span><span>11</span>
+                        </div>
+                    </div>
+
+                    <div class="pmu-box highlight-green ">
+                        <h3>Quinté</h3>
+                        <div class="pmu-numbers">
+                            <span>15</span><span>16</span><span>18</span><span>11</span><span>14</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+                      <!-- Nouveau tableau (27/04/2025) -->
+            <div class="pmu-section">
+                <h2>EXPERT DU TURF</h2>
+                <div class="date">Date : 27/04/2025</div>
+                
+                <div class="pmu-grid">
                     <div class="pmu-box highlight-orange locked">
                         <h3>Couplé <i class="fas fa-lock"></i></h3>
                         <div class="pmu-numbers">
@@ -1033,6 +1068,7 @@
                     </div>
                 </div>
             </div>
+
 
         </div>
 
